--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nrwl/linter": "15.8.5",
     "@nrwl/nest": "15.8.5",
     "@nrwl/node": "15.8.5",
+    "@nrwl/rspack": "^0.158.5",
     "@nrwl/webpack": "15.8.5",
     "@nrwl/workspace": "15.8.5",
     "@types/jest": "^29.4.0",
