--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nrwl/rspack": "^0.158.5",
     "@nrwl/webpack": "15.8.5",
     "@nrwl/workspace": "15.8.5",
+    "@rspack/core": "0.1.0",
+    "@rspack/dev-server": "0.1.0",
+    "@rspack/plugin-minify": "0.1.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
