--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/microservices": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "axios": "^1.0.0",
     "reflect-metadata": "^0.1.13",
@@ -14,6 +15,8 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@grpc/grpc-js": "^1.8.12",
+    "@grpc/proto-loader": "^0.7.5",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@nrwl/eslint-plugin-nx": "15.8.5",
@@ -32,14 +35,25 @@
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "amqp-connection-manager": "^4.1.11",
+    "amqplib": "^0.10.3",
+    "bufferutil": "^4.0.7",
+    "cache-manager": "^5.1.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
+    "ioredis": "^5.3.1",
     "jest": "^29.4.1",
     "jest-environment-node": "^29.4.1",
+    "kafkajs": "^2.2.4",
+    "mqtt": "^4.3.7",
+    "nats": "^2.13.1",
     "nx": "15.8.5",
     "prettier": "^2.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5"
+    "typescript": "~4.9.5",
+    "utf-8-validate": "^5.0.10"
   }
 }
